# draftlet

./: .gitignore  .npmrc  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: .gitignore  README.md  alembic.ini  pyproject.toml
api/src/alembic/: env.py
api/src/alembic/versions/: 1b2c3d4e5f67_add_thread_message_metadata.py  4d56f1388f8a_add_captures_and_source_message_id.py  8f9c2d1b6a34_add_search_fts.py  99337ff85fd2_initial_runtime_schema.py
api/src/draftlet_api/: __init__.py  main.py  runtime.py
api/src/draftlet_api/connectors/: base.py  registry.py
api/src/draftlet_api/core/: auth.py  config.py  enums.py  errors.py  logging.py
api/src/draftlet_api/database/: engine.py
api/src/draftlet_api/dtos/: capture.py  common.py  connector.py  conversation.py  draft.py  generation.py  health.py  message.py  search.py  setting.py
api/src/draftlet_api/middleware/: problem_details.py
apps/server/: draftlet-server.spec  pyproject.toml
apps/server/alembic/: env.py
apps/server/app/: main.py  packaged_main.py
apps/server/scripts/: evaluate_reply_prompts.py  measure_parser_reliability.py
apps/server/tests/: test_capabilities_api.py  test_cors.py  test_diagnostics_api.py  test_domain_api.py  test_domain_service.py  test_evaluate_reply_prompts.py  test_evaluate_reply_prompts_deterministic.py  test_models_api.py  test_prompt_builder.py  test_prompt_builder_platforms.py  test_replies_api.py  test_search_api.py  test_stream_parser.py  test_stream_parser_fixtures.py  test_support_bundle_api.py  test_threads_api.py
docs/: setup.md  (+4 more)
(+495 files in other folders)
